# DataModelMapper-CLI-tool

./: .gitignore  datamodelmapper.py  main.py  pyproject.toml  sample_stock_analysis_data_updated.csv
